--- a/resources/css/typography.css
+++ b/resources/css/typography.css
@@ -1,35 +1,51 @@
 @import 'tailwindcss/base';
 
-/* @layer base {
-  article h2 {
-    @apply text-2xl md:text-3xl font-bold mb-3 mt-4 text-green-500;
-  }
-  article h3 {
-    @apply text-xl md:text-2xl font-bold mb-3 mt-3 text-green-500;
-  }
-  article h4 {
-    @apply text-lg md:text-xl font-bold mb-3 mt-2 text-green-500;
-  }
-  article h5 {
-    @apply text-lg font-bold mb-3 mt-1 text-green-500;
-  }
-  article h6 {
-    @apply text-sm font-bold mb-3 mt-1 text-green-500;
-  }
-  article p {
-    @apply mb-4 text-justify;
-  }
-  article a {
-    @apply text-green-600 hover:text-yellow-500 hover:underline;
-  }
+@layer base {
+    h1 {
+        @apply text-xl sm:text-2xl md:text-3xl xl:text-4xl font-bold mb-4 mt-4;
+    }
 
-  article ul {
-    @apply list-disc ml-6 my-3;
-  }
-  article ol {
-    @apply list-decimal ml-6 my-3;
-  }
-  article blockquote {
-    @apply border-l-4 border-green-500 italic my-8 pl-8 md:pl-12;
-  }
-} */
+    h2 {
+        @apply text-lg sm:text-xl md:text-2xl xl:text-3xl font-bold mb-4 mt-4;
+    }
+
+    h3 {
+        @apply text-base sm:text-lg md:text-xl xl:text-2xl font-bold mb-3 mt-3;
+    }
+
+    h4 {
+        @apply text-base md:text-lg xl:text-xl font-bold mb-3 mt-3;
+    }
+
+    /*h5 {*/
+    /*    @apply text-lg font-bold mb-3 mt-1;*/
+    /*}*/
+
+    /*h6 {*/
+    /*    @apply text-sm font-bold mb-3 mt-1;*/
+    /*}*/
+
+    p {
+        @apply mb-4 text-justify;
+    }
+
+    /*a {*/
+    /*    @apply text-green-600 hover:text-yellow-500 hover:underline;*/
+    /*}*/
+
+    ul {
+        @apply text-base md:text-lg xl:text-xl list-disc ml-6 my-3;
+    }
+
+    ol {
+        @apply list-decimal ml-6 my-3;
+    }
+
+    blockquote {
+        @apply border-l-4 border-green-500 italic my-8 pl-8 md:pl-12;
+    }
+
+    mark {
+        @apply bg-yellow-300
+    }
+}
