--- a/resources/css/typography.css
+++ b/resources/css/typography.css
@@ -6,7 +6,7 @@
     }
 
     h2 {
-        @apply text-lg sm:text-xl md:text-2xl xl:text-3xl font-bold mb-6 mt-6;
+        @apply text-xl md:text-2xl xl:text-3xl font-bold mb-6 mt-6;
     }
 
     h3 {
